--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -2,7 +2,13 @@
 
 {% block body %}
     <div>
-        {{ message }}
+        {% if messages|length > 0 %}
+        {% for message in messages %}
+            <div>{{ message }}</div>
+        {% endfor %}
+        {% else %}
+            There is nothing yet
+        {% endif %}
     </div>
 {% endblock %}
 
