--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
     <div>
         {% if messages|length > 0 %}
-        {% for message in messages %}
-            <div>{{ message }}</div>
-        {% endfor %}
+            {% for message in messages|slice(0,limit) %}
+                <div>{{ message }}</div>
+            {% endfor %}
         {% else %}
             There is nothing yet
         {% endif %}
