--- a/templates/hello/show_one.html.twig
+++ b/templates/hello/show_one.html.twig
@@ -1,5 +1,10 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+<div>The current block is </div>
 <div>
     <b>
-        {{ message }}
+        {{ message.message }}
     </b>
 </div>
+{% endblock %}
