Add to internal variable in our include function

--- a/templates/hello/show_one.html.twig
+++ b/templates/hello/show_one.html.twig
@@ -3,8 +3,9 @@
 {% block body %}
 <div>The current block is </div>
 <div>
+    <div> {{ message.message }}</div>
     <b>
-        {{ message.message }}
+        {{ include ('hello/_message.html.twig', {message:message}) }}
     </b>
 </div>
 {% endblock %}
