--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -5,7 +5,7 @@
         {% if messages|length > 0 %}
             {% for message in messages|slice(0,limit) %}
                 <div>{{ message['message'] }}</div>
-                {{ include('hello/_message.html.twig') }}
+                {{ include('hello/_message.html.twig', {message: message}) }}
             {% endfor %}
         {% else %}
             There is nothing yet
