--- a/templates/micro_post/add.html.twig
+++ b/templates/micro_post/add.html.twig
@@ -3,5 +3,24 @@
 {% block title %} Create New Post {% endblock %}
 
 {% block body %}
-    {{ form(forma) }}
+    {{ form_start(forma) }}
+        <div>{{ form_errors(forma) }}</div>
+
+        <div>
+            {{ form_label(forma.title,'Please enter the title')}}
+        </div>
+        <div>
+            {{ form_widget(forma.title,{'attr':{'style':'color:red'}})}}
+        </div>
+
+        <div>
+            {{ form_label(forma.text,'Please enter the post')}}
+        </div>
+        <div>
+            {{ form_widget(forma.text)}}
+        </div>
+        <div>
+            <button type="submit">Send Data</button>
+        </div>
+    {{ form_end(forma) }}
 {% endblock %}
