--- a/templates/micro_post/_form.html.twig
+++ b/templates/micro_post/_form.html.twig
@@ -2,19 +2,17 @@
 <div>{{ form_errors(forma) }}</div>
 
 <div>
-    {{ form_label(forma.title,'Please enter the title')}}
-</div>
-<div>
-    {{ form_widget(forma.title,{'attr':{'style':'color:red'}})}}
+    {{ form_label(forma.title,'Please enter the title',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
+    {{ form_widget(forma.title,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border'}})}}
+    {{ form_errors(forma.title) }}
 </div>
 
 <div>
-    {{ form_label(forma.text,'Please enter the post')}}
+    {{ form_label(forma.text,'Please enter the post',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
+    {{ form_widget(forma.text,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border'}})}}
+    {{ form_errors(forma.title) }}
 </div>
 <div>
-    {{ form_widget(forma.text)}}
-</div>
-<div>
-    <button type="submit">Send Data</button>
+    <button type="submit" class="block w-full shadow-sm border-transparent bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-500 dark:hover:bg-indigo-400 text-white rounded-md border p-2 mt-4 mb-2">Send Data</button>
 </div>
 {{ form_end(forma) }}
