--- a/templates/micro_post/edit.html.twig
+++ b/templates/micro_post/edit.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %} Editing an Existing Post {% endblock %}
 
+{% block bread %}
+    -> Editing Post
+{% endblock %}
+
+
 {% block body %}
     {{ include('micro_post/_form.html.twig',{forma: forma}) }}
 {% endblock %}
