Add user authentifications

--- a/templates/micro_post/_form.html.twig
+++ b/templates/micro_post/_form.html.twig
@@ -4,13 +4,13 @@
 
 <div>
     {{ form_label(forma.title,'Please enter the title',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
-    {{ form_widget(forma.title,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border'}})}}
+    {{ form_widget(forma.title,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
     {{ form_errors(forma.title) }}
 </div>
 
 <div>
     {{ form_label(forma.text,'Please enter the post',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
-    {{ form_widget(forma.text,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border'}})}}
+    {{ form_widget(forma.text,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
     {{ form_errors(forma.text) }}
 </div>
 <div>
