--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" lang="En">
+<html class="" lang="En">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -31,7 +31,7 @@
             <div class="text-right">
                 <div class="text-sm text-gray 400 dark:text-gray-500">
                     <div>
-                        Login and Registration Goes Here
+                        <a href="{{ path('app_login') }}">Login</a>
                     </div>
                     <div>
                         <a href="{{ path('app_micro_post_add') }}">Add new</a>
