--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,12 +30,17 @@
 
             <div class="text-right">
                 <div class="text-sm text-gray 400 dark:text-gray-500">
-                    <div>
-                        <a href="{{ path('app_login') }}">Login</a>
-                    </div>
+                    {# Глобальная переменная app #}
+                    {# Цикл ниже означает что если пользователь авторизован то отображается кнопка Add new если нет то Login #}
+                    {% if app.user %}
                     <div>
                         <a href="{{ path('app_micro_post_add') }}">Add new</a>
                     </div>
+                    {% else %}
+                    <div>
+                        <a href="{{ path('app_login') }}">Login</a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
