--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,9 @@
                     <div>
                         <a href="{{ path('app_micro_post_add') }}">Add new</a>
                     </div>
+                    <div>
+                        <a href="{{ path('app_logout') }}">Logout</a>
+                    </div>
                     {% else %}
                     <div>
                         <a href="{{ path('app_login') }}">Login</a>
