--- a/templates/micro_post/_post.html.twig
+++ b/templates/micro_post/_post.html.twig
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="text-sm text-gray-500 dark:text-gray-400">
-        <a href="#">user@email.com</a>
+        {# через объект пост свойство автор попадаем в класс Автор в email #}
+        <a href="#">{{ post.author.email }}</a>
     </div>
     <div class="flex">
         <a href="{{ path('app_micro_post_edit',{post:post.id}) }}" class="mr-2">Edit</a>
