Делаем поле регистрации пользователя

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,9 @@
                     <div>
                         <a href="{{ path('app_login') }}">Login</a>
                     </div>
+                    <div>
+                        <a href="{{ path('app_register') }}">Registration</a>
+                    </div>
                     {% endif %}
                 </div>
             </div>
