--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -21,8 +21,15 @@
         {# Тип хайден что-то что будет отправленно по форме но не будет отображаться в ней #}
         {# в колонке value можем вводить также path или url в который будет перенаправлен пользователь #}
         <input type="hidden" name="_target_path" value="/micro-post">
-        <button type="submit" class="block w-full shadow-sm border-transparent bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-500 dark:hover:bg-indigo-400 text-white rounded-md border p-2 mt-4 mb-2" >Login</button>
+        <div>
+        <button type="submit"
+                class="block w-full shadow-sm border-transparent bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-500 dark:hover:bg-indigo-400 text-white rounded-md border p-2 mt-4 mb-2" >Login</button>
+        </div>
     </form>
+
+    <div class="mt-2 text-center text-gray-600 dark:text-gray-400">
+        Dont have an account? <a href="{{ path('app_register') }}">Register Here!</a>
+    </div>
 {% endblock %}
 
 
