--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,14 +13,25 @@
 
 
     {{ form_start(registrationForm) }}
+        <div>
         {{ form_label(registrationForm.email,'Username (email)',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
         {{ form_widget(registrationForm.email,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
         {{ form_errors(registrationForm.email) }}
-        <div>
-        {{ form_label(registrationForm.plainPassword,'Password',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
-        {{ form_widget(registrationForm.plainPassword,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
-        {{ form_errors(registrationForm.plainPassword) }}
         </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            {# Первые три нижние строчки означают пароль который будет введен основным а следующие три это дублирование пароля (т.е введите повторный пароль) #}
+            <div>
+                {{ form_label(registrationForm.plainPassword.first,'Password',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
+                {{ form_widget(registrationForm.plainPassword.first,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
+                {{ form_errors(registrationForm.plainPassword.first) }}
+            </div>
+            <div>
+                {{ form_label(registrationForm.plainPassword.second,'Repeated Password',{'label_attr':{'class':'block text-sm text-gray-700 dark:text-gray-300'}})}}
+                {{ form_widget(registrationForm.plainPassword.second,{'attr':{'class':'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p2 mt-1 mb-2'}})}}
+                {{ form_errors(registrationForm.plainPassword.second) }}
+            </div>
+        </div>
+
         <div class="flex items-center mt-4 mb-4">
             {{ form_widget(registrationForm.agreeTerms,{'attr':{'class':'h-4 w-4 rounded border-gray border text-indigo-300 mr-2'}})}}
             {{ form_label(registrationForm.agreeTerms, 'Agree to terms', {'label_attr' : {'class': 'text-sm text-gray-700 dark:text-gray-300 font-medium'}}) }}
