--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
             </div>
 
             <div class="text-right">
-                <div class="text-sm text-gray 400 dark:text-gray-500">
+                <div class="text-sm text-gray 500 dark:text-gray-400 flex">
                     {# Глобальная переменная app #}
                     {# Цикл ниже означает что если пользователь авторизован то отображается кнопка Add new если нет то Login #}
                     {# Указанный ниже коммент обозначает тоже самое что и app.user #}
@@ -38,7 +38,10 @@
                     <div>
                         <a href="{{ path('app_micro_post_add') }}">Add new</a>
                     </div>
-                    <div>
+                    <div class="ml-4">
+                        <a href="{{ path('app_settings_profile') }}">Profile Settings</a>
+                    </div>
+                    <div class="ml-4">
                         <a href="{{ path('app_logout') }}">Logout</a>
                     </div>
                     {% else %}
