--- a/templates/micro_post/index.html.twig
+++ b/templates/micro_post/index.html.twig
@@ -3,14 +3,5 @@
 {% block title %}All Posts{% endblock %}
 
 {% block body %}
-    {# Три колонны на большом экране, две на маленьком и одна колонна на мобильном телефоне, gap - пробелы между колоннами #}
-    <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-4">
-        {% if posts|length > 0 %}
-            {% for post in posts %}
-                {{ include('micro_post/_post.html.twig', {post:post}) }}
-            {% endfor %}
-        {% else %}
-            There is nothing yet
-        {% endif %}
-    </div>
+    {{ include ('micro_post/_post_list.html.twig') }}
 {% endblock %}
