Сокращаем количество запросов с помощью введения новых методов

--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -13,7 +13,7 @@
 
 <div class="mt-5">
 {# Отобразит посты только пользователя #}
-{{ include ('micro_post/_post_list.html.twig', {posts: user.posts}) }}
+{{ include ('micro_post/_post_list.html.twig', {posts: posts}) }}
 </div>
 
 {% endblock %}
