--- a/templates/profile/_profile_head.html.twig
+++ b/templates/profile/_profile_head.html.twig
@@ -1,5 +1,9 @@
 <div class="flex items-center">
     <div>
+        <div class="mb-2">
+            {{ include('shared/_avatar.html.twig',{ profile: user.yes, size:16}) }}
+        </div>
+
         <div class="text-2xl">{{ user.yes.name ?? user.email }}</div>
         <div class="text-lg text-gray-500 dark:text-gray-400 font-normal">{{ user.email }}</div>
 
